# striking-clock

./: README.md
flit/: README.md  pyproject.toml
hatch/: README.md  pyproject.toml  striking-clock.service
setuptools_pyproject.toml/: README.md  pyproject.toml  striking-clock.timer  striking_clock.py
setuptools_setup.cfg/: setup.cfg
setuptools_setup.py/: setup.py
