[metadata]
name = striking_clock
version = 1.0.0
description = A service that goes BONG! BONG! BONG! every hour.
long_description = file: README.md, LICENSE
home_page = https://github.com/raek/striking-clock/
author = Rasmus Bondesson
author_email = raek@raek.se
classifiers =
    License :: OSI Approved :: MIT License

[options]
py_modules =
    striking_clock
python_requires = >=3.5, <4
install_requires =
    appdirs

[options.entry_points]
console_scripts =
    striking-clock = striking_clock:main

[options.data_files]
share/systemd/user =
    striking-clock.service
    striking-clock.timer
